@@ -1,3 +1,12 @@
+2008-09-01  Esteban Sanchez  <estebans@artica.es>
+	
+	* extensions/update_manager.php,
+	extensions/update_manager/sql/update_manager.sql: Fixed update server
+	path typo error.
+
+	* extensions/update_manager/load_updatemanager.php: Force values to be
+	integer.
+
 2008-09-01  Raul Mateos  <raulofpandora@gmail.com>
 
 	* operation/snmp/snmp_console/snmp_view.php: Added style to buttons.
